fixed calendar spacing issue

--- a/src/styles/calendar.css
+++ b/src/styles/calendar.css
@@ -26,7 +26,7 @@ main {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-    height: 100%;
+    min-height: 90%;
 	align-items: center;
 }
 
